RESOLVED FIXED263894
REGRESSION(268264@main): wpt /css/css-break/float-010.html
https://bugs.webkit.org/show_bug.cgi?id=263894
Summary REGRESSION(268264@main): wpt /css/css-break/float-010.html
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-30 09:32:39 PDT
Antti Koivisto
Comment 2 2023-12-12 07:03:00 PST
EWS
Comment 3 2023-12-12 08:32:47 PST
Committed 271934@main (fd9b66e15e45): <https://commits.webkit.org/271934@main> Reviewed commits have been landed. Closing PR #21678 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.