REGRESSION(268264@main): wpt /css/css-break/float-010.html https://bugs.webkit.org/show_bug.cgi?id=263894 rdar://117690570

Reviewed by Alan Baradlay.

* LayoutTests/TestExpectations:
* Source/WebCore/layout/integration/inline/LayoutIntegrationPagination.cpp:
(WebCore::LayoutIntegration::computeAdjustmentsForPagination):

Treat floats with break-inside:avoid unsplittable.

* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::computeLineAdjustmentForPagination):

Allow breaking floats that are taller than the page.

Canonical link: https://commits.webkit.org/271934@main